# bfs

./: .gitignore  README.md  bfs.code-workspace
bfs/: Cargo.toml
bfs/src/: blockchain.rs  hashable.rs  main.rs  merkle_tree.rs  miner.rs  state.rs  transaction.rs  utils.rs  wallet.rs
bfs/src/block/: block_header.rs  block_info.rs  mod.rs
block-explorer/: README.md  bun.lockb  package-lock.json  package.json
block-explorer/src/: index.js
block-explorer/src/components/: Account.js  App.js  Block.js  BlockDetails.js  TX.js  TXDetails.js
block-explorer/src/styles/: account.css  app.css  block.css  blockdetails.css  tx.css  txdetails.css
