[package]
name = "bfs"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4.3", features = ["serde"] }
bincode = "1.3.3"
chrono = "0.4.38"
hex = "0.4.3"
k256 = { version = "0.13.3", features = ["serde"] }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha256 = "1.5.0"
